# chikchick

./: .env.example  .gitignore  app.py  manage.py  pyproject.toml
configs/: __init__.py  app_config.py  database.py  redis.py
controllers/auth/: __init__.py  login.py
extensions/: ext_database.py  ext_login.py  ext_migrate.py  ext_redis.py
libs/: external_api.py  helper.py  login.py  passport.py  password.py
migrations/versions/: 166c46547f3d_.py
models/: account.py
services/: account_service.py
services/errors/: __init__.py  account.py
